--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,7 @@ jobs:
           chmod 600 ~/.ssh/id_rsa
           ssh-keyscan -H ${{ secrets.EC2_HOST }} >> ~/.ssh/known_hosts
 
-      - name: Rsync source to EC2 (excludes large dirs)
+      - name: Rsync source to EC2
         run: |
           rsync -az --delete \
             --exclude node_modules \
@@ -31,15 +31,14 @@ jobs:
             --exclude out \
             --exclude logs \
             --exclude .vercel \
-            --exclude .yarn \
+            --exclude .yarn/cache \
             --exclude "*.log" \
             --exclude "*.tar.gz" \
-            --exclude ".env*.local" \
-            --exclude ".env" \
+            --exclude ".env*" \
             ./ \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:${{ secrets.APP_PATH }}/
 
-      - name: Build & restart frontend on EC2
+      - name: Build & Restart Store on EC2
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
@@ -50,105 +49,44 @@ jobs:
 
             cd ${{ secrets.APP_PATH }}
 
-            # Load shell environment (for yarn/node paths)
+            # Load environment
             export NVM_DIR="$HOME/.nvm"
             [ -s "$NVM_DIR/nvm.sh" ] && . "$NVM_DIR/nvm.sh"
-            [ -s "$HOME/.bashrc" ] && . "$HOME/.bashrc" || true
-            [ -s "$HOME/.profile" ] && . "$HOME/.profile" || true
+            [ -s "$HOME/.bashrc" ] && . "$HOME/.bashrc"
+            [ -s "$HOME/.profile" ] && . "$HOME/.profile"
 
-            # Ensure Node.js is available
-            if ! command -v node &> /dev/null; then
-              echo "❌ Error: Node.js not found. Please install Node.js first."
+            # Ensure Node exists
+            if ! command -v node >/dev/null 2>&1; then
+              echo "❌ Node.js not found"
               exit 1
             fi
 
-            # Try to enable corepack (comes with Node.js 16.10+)
-            if command -v corepack &> /dev/null; then
-              echo "Enabling corepack..."
-              corepack enable || true
-              corepack prepare yarn@stable --activate || true
-            fi
+            # Enable Corepack + Yarn (USER SPACE)
+            export COREPACK_ENABLE_STRICT=0
+            corepack enable
+            corepack prepare yarn@4.6.0 --activate
 
-            # Ensure yarn is in PATH
-            if ! command -v yarn &> /dev/null; then
-              # Try common yarn locations
-              if [ -f "$HOME/.yarn/bin/yarn" ]; then
-                export PATH="$HOME/.yarn/bin:$PATH"
-              elif [ -f "/usr/local/bin/yarn" ]; then
-                export PATH="/usr/local/bin:$PATH"
-              elif command -v npm &> /dev/null; then
-                # Install yarn via npm as fallback
-                echo "Installing yarn via npm..."
-                npm install -g yarn || true
-              fi
-            fi
+            # Install deps
+            yarn install --immutable
 
-            # Determine package manager (yarn or npm)
-            if command -v yarn &> /dev/null; then
-              PACKAGE_MANAGER="yarn"
-              INSTALL_CMD="yarn install --immutable"
-              BUILD_CMD="yarn build"
-            elif command -v npm &> /dev/null; then
-              PACKAGE_MANAGER="npm"
-              INSTALL_CMD="npm ci"
-              BUILD_CMD="npm run build"
-              echo "⚠️  Warning: Using npm instead of yarn"
-            else
-              echo "❌ Error: Neither yarn nor npm found. Please install Node.js."
-              exit 1
-            fi
-
-            echo "Installing dependencies with $PACKAGE_MANAGER..."
-            echo "Package manager path: $(which $PACKAGE_MANAGER || echo 'not found')"
-            $INSTALL_CMD
-
-            # Clean old build
+            # Clean build
             rm -rf .next
 
-            # Load environment variables from .env.production if it exists
-            # This is required for Next.js build (e.g., STRIPE_SECRET_KEY)
+            # Load env vars for build
             if [ -f ".env.production" ]; then
-              echo "Loading environment variables from .env.production..."
               set -a
               source .env.production
               set +a
-            else
-              echo "⚠️  Warning: .env.production not found. Build may fail if required env vars are missing."
             fi
 
-            # Set environment variables before build (Next.js reads these during build)
             export NODE_ENV=production
 
-            # Build application
-            echo "Building application..."
-            $BUILD_CMD
+            # Build Next.js
+            yarn build
 
-            # Create PM2 ecosystem config file
-            APP_PATH="${{ secrets.APP_PATH }}"
-            
-            # Determine start command based on available package manager
-            if [ "$PACKAGE_MANAGER" = "yarn" ]; then
-              # Find yarn path (prefer corepack, fallback to yarn in PATH)
-              if [ -f "$HOME/.corepack/v1/yarn/4.6.0/yarn.js" ]; then
-                START_SCRIPT="node"
-                START_ARGS="$HOME/.corepack/v1/yarn/4.6.0/yarn.js start"
-              else
-                START_SCRIPT="yarn"
-                START_ARGS="start"
-              fi
-            else
-              # Use npm
-              START_SCRIPT="npm"
-              START_ARGS="run start"
-            fi
-            
-            echo "Creating PM2 ecosystem.config.js (script: $START_SCRIPT, args: $START_ARGS)"
-            printf 'module.exports = {\n  apps: [\n    {\n      name: "store",\n      script: "%s",\n      args: "%s",\n      cwd: "%s",\n      env: {\n        NODE_ENV: "production",\n        NEXT_PUBLIC_MEDUSA_BACKEND_URL: "https://admin.zdacomm.com"\n      }\n    }\n  ]\n}\n' "$START_SCRIPT" "$START_ARGS" "$APP_PATH" > ecosystem.config.js
-
-            # Restart store via PM2 using ecosystem config
-            echo "Starting store with PM2..."
+            # Restart PM2
             pm2 delete store || true
-            pm2 start ecosystem.config.js
+            pm2 start "yarn start" --name store
             pm2 save
 
-            echo "✅ Store deployed successfully"
+            echo "✅ Deployment successful"
