--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     "next-share": "^0.27.0",
     "nextjs-toploader": "^1.6.12",
     "nodemailer": "^7.0.0",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-google-recaptcha-v3": "^1.11.0",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.4.1",
@@ -48,8 +48,8 @@
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "19.0.8",
-    "@types/react-dom": "19.0.3",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "15.1.7",
     "postcss": "^8.4.31",
