--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "gsap": "^3.14.2",
     "i": "^0.3.7",
     "lenis": "^1.3.17",
-    "next": "^14.2.5",
+    "next": "14.2.33",
     "next-auth": "^4.24.11",
     "next-share": "^0.27.0",
     "nextjs-toploader": "^1.6.12",
@@ -51,7 +51,7 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.5",
+    "eslint-config-next": "14.2.33",
     "postcss": "^8.4.31",
     "tailwindcss": "^4.0.0",
     "tsx": "^4.20.6",
