--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,10 @@ on:
   push:
     branches: ["main"]
 
+concurrency:
+  group: deploy-ec2
+  cancel-in-progress: false
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -30,13 +34,13 @@ jobs:
             ./ \
             ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }}:~/app/
 
-      - name: Install, build and start
+      - name: Install and build
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_KEY }}
-          command_timeout: 15m
+          command_timeout: 45m
           script: |
             set -e
             cd ~/app
@@ -51,7 +55,17 @@ jobs:
             rm -rf .next
             export NODE_ENV=production
             yarn build
+            echo "Build done."
 
+      - name: Restart app
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USER }}
+          key: ${{ secrets.EC2_KEY }}
+          command_timeout: 1m
+          script: |
+            cd ~/app
             pm2 delete app 2>/dev/null || true
             pm2 start "yarn start" --name app --cwd ~/app
             pm2 save
