--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev -p 8000",
     "build": "next build",
+    "analyze": "next build",
     "stripe:listen": "stripe listen --forward-to http://localhost:8000/api/webhook",
     "start": "NODE_ENV=production next start -p 8000",
     "lint": "next lint",
@@ -45,6 +46,7 @@
     "use-shopping-cart": "^3.1.8"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "14",
     "@tailwindcss/postcss": "^4.0.0",
     "@types/node": "^20.11.30",
     "@types/nodemailer": "^6.4.14",
