--- a/.env.local.example
+++ b/.env.local.example
@@ -44,5 +44,8 @@ NEXT_PUBLIC_WAREHOUSE_COUNTRY="US"
 NEXT_PUBLIC_WAREHOUSE_PHONE="+1234567890"
 NEXT_PUBLIC_WAREHOUSE_EMAIL="warehouse@example.com"
 
+# Google Analytics 4 (optional; leave unset to disable)
+NEXT_PUBLIC_GA_MEASUREMENT_ID="G-XXXXXXXXXX"
+
 # Node Environment
 NODE_ENV="development"
